--- a/package.json
+++ b/package.json
@@ -3,16 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",  
-    "dev": "nodemon index.js"  
+    "dev": "vercel dev" // Use Vercel CLI for local development
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "nodemon": "^3.1.4",
     "puppeteer": "^23.1.0"
   }
 }
