--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "vercel dev" // Use Vercel CLI for local development
+    "dev": "vercel dev"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "puppeteer": "^23.1.0"
-  }
+  },
+  "license": "ISC"
 }
