--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "vercel dev"
   },
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
-    "puppeteer": "^23.1.0"
+    "puppeteer-core": "^10.1.0"
   },
   "license": "ISC"
 }
