--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,7 @@
 {
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/api/$1"
-      }
-    ],
-    "headers": [
-      {
-        "source": "/generate-pdf",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "*" 
-          },
-          {
-            "key": "Access-Control-Allow-Methods",
-            "value": "GET, POST, OPTIONS"
-          },
-          {
-            "key": "Access-Control-Allow-Headers",
-            "value": "Content-Type"
-          }
-        ]
-      }
-    ]
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs18.x"
+    }
   }
-  
+}
